--- a/diccionarioPrueba/Base.lproj/Main.storyboard
+++ b/diccionarioPrueba/Base.lproj/Main.storyboard
@@ -15,6 +15,76 @@
         </array>
     </customFonts>
     <scenes>
+        <!--Memorama View Controller-->
+        <scene sceneID="zaS-gD-r1B">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tau-Hy-UC8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="3jo-L1-qkn" customClass="MemoramaViewController" customModule="diccionarioPrueba" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kEc-ZX-tc8">
+                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CH6-2A-YBn">
+                                <rect key="frame" x="20" y="208" width="1326" height="796"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7le-ap-41J">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="XJu-nm-2Xc">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Puntos: 0 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FFx-of-bLj">
+                                <rect key="frame" x="611" y="128" width="144" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="KohinoorBangla-Regular" family="Kohinoor Bangla" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tiempo: #" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TWG-Sn-rg3">
+                                <rect key="frame" x="1129" y="128" width="135" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="KohinoorBangla-Regular" family="Kohinoor Bangla" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYV-3P-eP4">
+                                <rect key="frame" x="76" y="127" width="136" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Reiniciar" image="refresh">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="ReiniciarJuego:" destination="3jo-L1-qkn" eventType="touchUpInside" id="z5Z-fR-o8Y"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="RLd-ND-vWJ"/>
+                    </view>
+                    <connections>
+                        <outlet property="cvMemorama" destination="CH6-2A-YBn" id="FwF-O3-0Pr"/>
+                        <outlet property="lbPuntos" destination="FFx-of-bLj" id="J1U-My-COt"/>
+                        <outlet property="lbTiempo" destination="TWG-Sn-rg3" id="Npg-mc-F1A"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="2888.8726207906293" y="-2477.34375"/>
+        </scene>
         <!--View Controller Responde-->
         <scene sceneID="qOf-Cq-1tL">
             <objects>
@@ -234,7 +304,7 @@
             </objects>
             <point key="canvasLocation" x="310" y="-188"/>
         </scene>
-        <!--View Controller-->
+        <!--Responde Rapido-->
         <scene sceneID="ciD-Z9-hXH">
             <objects>
                 <viewController id="38h-4q-ssO" sceneMemberID="viewController">
@@ -265,7 +335,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="ZiB-Az-EAL"/>
                     </view>
-                    <navigationItem key="navigationItem" id="QZc-Db-ggF"/>
+                    <navigationItem key="navigationItem" title="Responde Rapido" id="QZc-Db-ggF"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nX4-zs-Rxa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -452,6 +522,7 @@
                                 <state key="normal" title="Jugar"/>
                                 <connections>
                                     <action selector="clickJugar:" destination="guA-lZ-sge" eventType="touchUpInside" id="HDV-qz-05T"/>
+                                    <segue destination="pfB-HN-JxI" kind="presentation" identifier="memorama" id="Tc0-s6-HD5"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -472,6 +543,43 @@
             </objects>
             <point key="canvasLocation" x="308.3455344070278" y="-1028.90625"/>
         </scene>
+        <!--Memorama-->
+        <scene sceneID="vJc-Iq-nV8">
+            <objects>
+                <viewController title="Memorama" id="8Nk-MN-WKd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JmX-Ft-UyS">
+                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="memorama" translatesAutoresizingMaskIntoConstraints="NO" id="iyL-V8-7qq">
+                                <rect key="frame" x="316" y="95" width="734" height="187"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Instrucciones del juego Memorama" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rz2-4X-ZGo">
+                                <rect key="frame" x="154" y="290" width="1059" height="525"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.92063074664641587" green="0.90769931079056132" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7mU-ew-W8E">
+                                <rect key="frame" x="660" y="899" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Jugar"/>
+                                <connections>
+                                    <segue destination="3jo-L1-qkn" kind="show" id="weo-Wj-HCu"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="b6W-we-895"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Memorama" id="0cB-Pw-jkI"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ryq-Zz-foV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2153.5871156661783" y="-2477.34375"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="hRs-1G-efO">
             <objects>
@@ -490,12 +598,32 @@
             </objects>
             <point key="canvasLocation" x="1441.5812591508052" y="-1742.578125"/>
         </scene>
+        <!--Memorama-->
+        <scene sceneID="66E-sM-j5s">
+            <objects>
+                <navigationController title="Memorama" automaticallyAdjustsScrollViewInsets="NO" id="pfB-HN-JxI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jDB-lj-lde">
+                        <rect key="frame" x="0.0" y="20" width="1366" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8Nk-MN-WKd" kind="relationship" relationship="rootViewController" id="qTX-6f-jgw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sJB-9t-oF4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1442" y="-2477"/>
+        </scene>
     </scenes>
     <resources>
         <image name="background" width="700" height="500"/>
         <image name="catchem" width="582" height="252"/>
         <image name="folder" width="26" height="26"/>
+        <image name="memorama" width="676" height="274"/>
         <image name="pacman" width="26" height="26"/>
+        <image name="refresh" width="26" height="26"/>
         <image name="responde" width="782" height="238"/>
     </resources>
 </document>
